# Rabbit

./: .gitignore  README.md  Rabbit Hemi sphere.stl  bunny ears.stl  bunny head anchor.stl  bunny head_MIR.stl  bunny tendon.stl
docs/: M2 Upgrades  environment_setup.md
hardware/: Wabbit.ipt  bunny ears.ipt  bunny head anchor.ipt  bunny head.ipt  bunny head_MIR.ipt  bunny neck.ipt  bunny offset.ipt  bunny tendon.ipt
hardware/stl/: Wabbit.stl  bunny head.stl  bunny neck.stl  bunny offset.stl  rabbit base plate.stl
software/: Wabbit_local_install.sh
software/burrowWEB/: README.md  index.html  package-lock.json  package.json  vite.config.ts
software/burrowWEB/src/: App.tsx
software/ros2_ws/src/motor_controller/: package.xml  setup.py
software/ros2_ws/src/motor_controller/motor_controller/: motor_driver.py
software/ros2_ws/src/servo_controller/: package.xml  setup.py
software/ros2_ws/src/servo_controller/servo_controller/: servo_driver.py
software/ros2_ws/src/teleop/: package.xml  setup.py
software/ros2_ws/src/teleop/teleop/: keyboard.py
software/ros2_ws/src/wabbit_bringup/: package.xml  setup.cfg  setup.py
software/ros2_ws/src/wabbit_bringup/launch/: wabbit.launch.py
software/scripts/: WABBIT_launch.sh  WABBIT_local_install.sh
